# embedded-innodb

./: .clang-format  .gitignore  .gitmodules  .quickly  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h.in  configure  configure.ac  haildb.h  haildb.spec.in  innodb.h  innodb.spec.in  libhaildb.ver  libinnodb.ver
.github/workflows/: c-cpp.yml
api/: api0api.c  api0api.cc  api0cfg.c  api0cfg.cc  api0misc.c  api0misc.cc  api0sql.c  api0sql.cc  api0status.c  api0status.cc  api0ucode.c  api0ucode.cc
btr/: btr0blob.cc  btr0btr.c  btr0btr.cc  btr0cur.c  btr0cur.cc  btr0pcur.c  btr0pcur.cc  btr0sea.c  btr0sea.cc
buf/: buf0buddy.c  buf0buddy.cc  buf0buf.c  buf0buf.cc  buf0dblwr.cc  buf0flu.c  buf0flu.cc  buf0lru.c  buf0lru.cc  buf0rea.c  buf0rea.cc
cmake/: cmake_install.cmake  config.h.cmake
data/: data0data.c  data0data.cc  data0type.c  data0type.cc
ddl/: ddl0ddl.c  ddl0ddl.cc
dict/: dict0boot.c  dict0boot.cc  dict0crea.c  dict0crea.cc  dict0dict.c  dict0dict.cc  dict0fk.cc  dict0load.c  dict0load.cc  dict0mem.c  dict0mem.cc  dict0store.cc
dyn/: dyn0dyn.c  dyn0dyn.cc
eval/: eval0eval.c  eval0eval.cc  eval0proc.c  eval0proc.cc
fil/: fil0fil.c  fil0fil.cc
fsp/: fsp0fsp.c  fsp0fsp.cc
fut/: fut0fut.c  fut0fut.cc  fut0lst.c  fut0lst.cc
ha/: ha0ha.c  ha0ha.cc  ha0storage.c  ha0storage.cc  hash0hash.c  hash0hash.cc
ibuf/: ibuf0ibuf.c  ibuf0ibuf.cc
include/: api0api.h  api0misc.h  api0ucode.h  btr0blob.h  btr0btr.h  btr0btr.ic  btr0cur.h  btr0cur.ic  btr0pcur.h  btr0pcur.ic  btr0sea.h  btr0sea.ic  btr0types.h  buf0buddy.h  buf0buddy.ic  buf0buf.h  buf0buf.ic  buf0dblwr.h  buf0flu.h  buf0flu.ic  buf0lru.h  buf0lru.ic  buf0rea.h  buf0types.h  data0data.h  data0data.ic  data0type.h  data0type.ic  data0types.h  db0err.h  ddl0ddl.h  dict0boot.h  dict0boot.ic  dict0crea.h  dict0crea.ic  dict0dict.h  dict0dict.ic  dict0load.h  dict0load.ic  dict0mem.h  (+175 more)
lock/: lock0deadlock.cc  lock0iter.c  lock0iter.cc  lock0lock.c  lock0lock.cc  lock0validator.cc
log/: log0core.cc  log0log.c  log0log.cc  log0recv.c  log0recv.cc  log_buffer.cc  log_checkpoint.cc  log_core.cc  log_group.cc  log_io.cc  log_io_uring.cc  log_io_uring.h  log_write.cc  recv_parse.cc  recv_recovery.cc  recv_scan.cc
m4/: pandora_have_libinnodb.m4
mach/: mach0data.c  mach0data.cc
mem/: mem0mem.c  mem0mem.cc
mtr/: mtr0log.c  mtr0log.cc  mtr0mtr.c  mtr0mtr.cc
os/: os0aio.cc  os0file.c  os0file.cc  os0proc.c  os0proc.cc  os0sync.c  os0sync.cc  os0thread.c  os0thread.cc
page/: page0cur.c  page0cur.cc  page0page.c  page0page.cc  page0zip.c  page0zip.cc
pars/: lexyy.c  lexyy.cc  make_bison.sh  make_flex.sh  pars0grm.c  pars0grm.cc  pars0grm.y  pars0lex.l  pars0opt.c  pars0opt.cc  pars0pars.c  pars0pars.cc  pars0sym.c  pars0sym.cc
que/: que0que.c  que0que.cc
read/: read0read.c  read0read.cc
rem/: rem0cmp.c  rem0cmp.cc  rem0rec.c  rem0rec.cc
row/: row0ext.c  row0ext.cc  row0ins.c  row0ins.cc  row0merge.c  row0merge.cc  row0pread.cc  row0prebuilt.c  row0prebuilt.cc  row0purge.c  row0purge.cc  row0row.c  row0row.cc  row0sel.c  row0sel.cc  row0uins.c  row0uins.cc  row0umod.c  row0umod.cc  row0undo.c  row0undo.cc  row0upd.c  row0upd.cc  row0vers.c  row0vers.cc
srv/: srv0que.c  srv0que.cc  srv0srv.c  srv0srv.cc  srv0start.c  srv0start.cc
sync/: sync0arr.c  sync0arr.cc  sync0rw.c  sync0rw.cc  sync0sync.c  sync0sync.cc
tests/: .clang-format  CMakeLists.examples  CMakeLists.txt  CTestTestfile.cmake  Makefile.examples  README  README_LOG_TESTING.md  bug579934_open_index_by_name_segv.c  bug579934_open_index_by_name_segv.cc  ib_cfg.c  ib_cfg.cc  ib_client_compare.c  ib_client_compare.cc  ib_compressed.c  ib_compressed.cc  ib_cursor.c  ib_cursor.cc  ib_ddl.c  ib_ddl.cc  ib_deadlock.c  ib_deadlock.cc  ib_dict-2.cc  ib_dict.c  ib_dict.cc  ib_drop.c  ib_drop.cc  ib_duplicate_key_name.c  ib_duplicate_key_name.cc  ib_index.c  ib_index.cc  ib_logger.c  ib_logger.cc  ib_mt_base.c  ib_mt_base.cc  ib_mt_base.h  ib_mt_drv.c  ib_mt_drv.cc  ib_mt_drv.h  ib_mt_stress.c  ib_mt_stress.cc  (+49 more)
thr/: thr0loc.c  thr0loc.cc
trx/: trx0purge.c  trx0purge.cc  trx0rec.c  trx0rec.cc  trx0roll.c  trx0roll.cc  trx0rseg.c  trx0rseg.cc  trx0sys.c  trx0sys.cc  trx0trx.c  trx0trx.cc  trx0undo.c  trx0undo.cc  trx0undo_rec.cc
unit-tests/: CMakeLists.txt  dyn0dyn-t.cc  test_dict_table_lru.cc  test_lock.cc  test_log_io.cc  test_log_io_uring.cc  unit-test.cc  unit_test_logger.cc  ut0slst-t.cc
usr/: usr0sess.c  usr0sess.cc
ut/: ut0byte.c  ut0byte.cc  ut0dbg.c  ut0dbg.cc  ut0list.c  ut0list.cc  ut0mem.c  ut0mem.cc  ut0rbt.c  ut0rbt.cc  ut0rnd.c  ut0rnd.cc  ut0ut.c  ut0ut.cc  ut0vec.c  ut0vec.cc
win/: innodb.def
